--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script src="https://cdn.jsdelivr.net/npm/vega-embed@[VERSION]"></script>
   </head>
 <body>
+  <p>Test</p>
 
 <div id="vis"></div>
 
