--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <p>Test</p>
 
-<div id="vis"></div>
+<div id="vis">
 
 <script type="text/javascript">
   var spec = "https://raw.githubusercontent.com/mtur0005/Visualisation2/main/plots/history_income_line.json";
@@ -18,5 +18,6 @@
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
 </script>
+</div>
 </body>
 </html>
