--- a/index.html
+++ b/index.html
@@ -19,5 +19,12 @@
   }).catch(console.error);
 </script>
 </div>
+  
+<div id="vis" class="vega-embed has-actions"><div class="chart-wrapper" role="graphics-document" aria-roledescription="visualization" aria-label="A simple bar chart with embedded data." style="cursor: default;"><canvas width="286" height="308" class="marks" style="width: 229px; height: 247px;"></canvas><form class="vega-bindings"></form></div><details title="Click to view actions" open=""><summary>
+<svg viewBox="0 0 16 16" fill="currentColor" stroke="none" stroke-width="1" stroke-linecap="round" stroke-linejoin="round">
+  <circle r="2" cy="8" cx="2"></circle>
+  <circle r="2" cy="8" cx="8"></circle>
+  <circle r="2" cy="8" cx="14"></circle>
+</svg></summary><div class="vega-actions"><a href="#" target="_blank" download="visualization.svg">Save as SVG</a><a href="#" target="_blank" download="visualization.png">Save as PNG</a><a href="#">View Source</a><a href="#">View Compiled Vega</a><a href="#">Open in Vega Editor</a></div></details></div>
 </body>
 </html>
