--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
   </head>
 <body>
-  <p>Test</p>
+  <div>
+    <h1>Average Income in the United States of America</h1>
+    <p>test info</p>
+  </div>
   
 <div id="vis"></div>
 <script type="text/javascript">
