--- a/index.html
+++ b/index.html
@@ -13,22 +13,24 @@
     <p>test info</p>
   </div>
   <div>
-    <div id="vis"></div>
-    <script type="text/javascript">
-      var spec = "https://raw.githubusercontent.com/mtur0005/Visualisation2/main/plots/history_income_line.json";
-      vegaEmbed('#vis', spec).then(function(result) {
-        // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
-      }).catch(console.error);
-    </script>
-    
-    <div id="vis"></div>
-    <script type="text/javascript">
-      var spec = "https://raw.githubusercontent.com/mtur0005/Visualisation2/main/plots/gender_income_bar.json";
-      vegaEmbed('#vis', spec).then(function(result) {
-        // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
-      }).catch(console.error);
-    </script>
-    
+    <div>
+      <div id="vis1"></div>
+      <script type="text/javascript">
+        var spec = "https://raw.githubusercontent.com/mtur0005/Visualisation2/main/plots/history_income_line.json";
+        vegaEmbed('#vis', spec).then(function(result) {
+          // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+        }).catch(console.error);
+      </script>
+    </div>
+    <div>
+      <div id="vis2"></div>
+      <script type="text/javascript">
+        var spec = "https://raw.githubusercontent.com/mtur0005/Visualisation2/main/plots/gender_income_bar.json";
+        vegaEmbed('#vis', spec).then(function(result) {
+          // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+        }).catch(console.error);
+      </script>
+    </div>
   </div>
-  </body>
+</body>
 </html>
