--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div id="vis1"></div>
       <script type="text/javascript">
         var spec = "https://raw.githubusercontent.com/mtur0005/Visualisation2/main/plots/history_income_line.json";
-        vegaEmbed('#vis', spec).then(function(result) {
+        vegaEmbed('#vis1', spec).then(function(result) {
           // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
         }).catch(console.error);
       </script>
@@ -26,7 +26,7 @@
       <div id="vis2"></div>
       <script type="text/javascript">
         var spec = "https://raw.githubusercontent.com/mtur0005/Visualisation2/main/plots/gender_income_bar.json";
-        vegaEmbed('#vis', spec).then(function(result) {
+        vegaEmbed('#vis2', spec).then(function(result) {
           // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
         }).catch(console.error);
       </script>
