--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
   </head>
 <body>
-  <div>
+  <div class="row">
     <h1>Average Income in the United States of America</h1>
     <p>test info</p>
   </div>
-  <div>
+  <div class="row">
     <div>
-      <div id="vis1"></div>
+      <div id="vis1" class="column"></div>
     </div>
     <div>
-      <div id="vis2"></div>
+      <div id="vis2" class="column"></div>
     </div>
   </div>
   
