--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
     .pure-g{
       margin-bottom: 25px;
        }
-    
+     .column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+       }
   </style>
     
   </head>
