--- a/index.html
+++ b/index.html
@@ -17,20 +17,29 @@
   width: 33.33%;
   padding: 5px;
        }
+       .page{
+       width: 1300px;    
+       background-color: white;   
+       margin: auto;
+       padding: 50px;
+       padding-top: 35px;
+    }
   </style>
     
   </head>
 <body>
-  <div class="row">
-    <h1>Average Income in the United States of America</h1>
-    <p>test info</p>
-  </div>
-  <div class="row">
-    <div>
-      <div id="vis1" class="column"></div>
+  <div class="page">
+    <div class="row">
+      <h1>Average Income in the United States of America</h1>
+      <p>test info</p>
     </div>
-    <div>
-      <div id="vis2" class="column"></div>
+    <div class="row">
+      <div>
+        <div id="vis1" class="column"></div>
+      </div>
+      <div>
+        <div id="vis2" class="column"></div>
+      </div>
     </div>
   </div>
   
