--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <div class="page">
     <div class="row">
       <h1>Average Income in the United States of America</h1>
-      <p>test info</p>
+      <p>test info 1</p>
     </div>
     <div class="row">
       <div>
