--- a/index.html
+++ b/index.html
@@ -12,9 +12,14 @@
     .pure-g{
       margin-bottom: 25px;
        }
+       .column {
+  float: left;
+  width: 100%;
+  padding: 5px;
+       }
      
        .page{
-       width: 1500px;    
+       width: 1300px;    
        background-color: white;   
        margin: auto;
        padding: 50px;
@@ -27,7 +32,7 @@
   <div class="page">
     <div class="row">
       <h1>Average Income in the United States of America</h1>
-      <p>test info 2</p>
+      <p>test info</p>
     </div>
     <div class="row">
       <div>
