--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     .row{
       margin-bottom: 25px;
        }
+       .column {
+  float: left;
+  width: 50%;
+  padding: 5px;
     
      
        .page{
@@ -28,7 +32,7 @@
   <div class="page">
     <div class="row">
       <h1>Average Income in the United States of America</h1>
-      <p>test info 1</p>
+      <p>test info 2</p>
     </div>
     <div class="row">
       <div>
