--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
       <div id="vis3" class="column"></div>
     </div>
     <div class="row">
-      
+      <div class="column">
         <img scr="https://raw.githubusercontent.com/mtur0005/Visualisation2/main/plots/income_normal.png" alt="Normal distribution of income in the USA">
-    
+      </div>
       <div id="vis4" class="column"></div>
     </div>
   </div>
