--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </div>
     <div class="row">
       <div class="column">
-        <img scr="https://raw.githubusercontent.com/mtur0005/Visualisation2/main/plots/income_normal.png" alt="Normal distribution of income in the USA">
+        <img scr="plots/income_normal.PNG" alt="Normal distribution of income in the USA">
       </div>
       <div id="vis4" class="column"></div>
     </div>
