--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <div class="page">
     <div class="row">
       <h1>Average Income in the United States of America</h1>
-      <p>test info</p>
+      <p>test info 1</p>
     </div>
     <div class="row">
       <div id="vis1" class="column"></div>
@@ -43,7 +43,7 @@
     </div>
     <div class="row">
       <div class="column">
-        <img scr="plots/income_normal.PNG" alt="Normal distribution of income in the USA">
+        <img scr="./plots/income_normal.png" alt="Normal distribution of income in the USA">
       </div>
       <div id="vis4" class="column"></div>
     </div>
