--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6"></script>
     
      <style>
-    
+    body{
+       background-color: lightgray;
+     }
     .row{
       margin-bottom: 25px;
        }
