--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <div class="page">
     <div class="row">
       <h1>Average Income in the United States of America</h1>
-      <p>test info 1</p>
+      <p>test info</p>
     </div>
     <div class="row">
       <div id="vis1" class="column"></div>
@@ -43,7 +43,7 @@
     <div class="row">
       
       <div class="column">
-       <img src="./plots/income_normal.png" alt="Normal distribution of income in the USA", width="300", height="400"> 
+       <img src="./plots/income_normal.png" alt="Normal distribution of income in the USA", width="500", height="450"> 
       </div>
       <div id="vis4" class="column"></div>
     
