--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
       <div id="vis4" class="column"></div>
     
     </div>
+    <div class="row">
+      <p>Test bottom</p>
+    </div>
   </div>
   
   
