--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
     
     </div>
     <div class="row">
+      <div class ="column">
       <p>Test bottom</p>
       <p>Test bottom2</p>
+    </div>
     </div>
   </div>
   
