--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 <body>
   <div class="page">
     <div class="row">
-      <h1>Average Income in the United States of America</h1>
-      <p>test info</p>
+      <h1 align="center">Average Household Income in the United States of America</h1>
+      <p align="center">All data was gathered from the 2015 census except for the history of household incomes</p>
     </div>
     <div class="row">
       <div id="vis1" class="column"></div>
