--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <div class="page">
     <div class="row">
       <h1 align="center">Average Household Income in the United States of America</h1>
-      <p align="center">All data was gathered from the 2015 census except for the history of household incomes</p>
+      <p align="center">All data was gathered from the 2015 USA census except for the history of household incomes</p>
     </div>
     <div class="row">
       <div id="vis1" class="column"></div>
@@ -49,10 +49,12 @@
     
     </div>
     <div class="row">
-      <div class ="column">
-      <p>Test bottom</p>
-      <p>Test bottom2</p>
-    </div>
+      <div class ="column" align="left">
+        <p>This visualisation was made by Matthew Turchiarelli</p>
+      </div>
+      <div class ="column" align="right">
+        <p>The datasets used were from <a href="https://www.kaggle.com/goldenoakresearch/us-household-income-stats-geo-locations">Kaggle</a> and the <a href="https://www.census.gov/data/tables/time-series/demo/income-poverty/historical-income-households.html">Census</a></p>
+      </div>
     </div>
   </div>
   
