--- a/index.html
+++ b/index.html
@@ -50,10 +50,7 @@
     </div>
     <div class="row">
       <div class ="column" align="left">
-        <p>This visualisation was made by Matthew Turchiarelli</p>
-      </div>
-      <div class ="column" align="right">
-        <p>The datasets used were from <a href="https://www.kaggle.com/goldenoakresearch/us-household-income-stats-geo-locations">Kaggle</a> and the <a href="https://www.census.gov/data/tables/time-series/demo/income-poverty/historical-income-households.html">Census</a></p>
+        <p>This visualisation was made by Matthew Turchiarelli. The datasets used were from <a href="https://www.kaggle.com/goldenoakresearch/us-household-income-stats-geo-locations">Kaggle</a> and the <a href="https://www.census.gov/data/tables/time-series/demo/income-poverty/historical-income-households.html">Census</a></p>
       </div>
     </div>
   </div>
