--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
       <div id="vis4" class="column"></div.
     </div>
     <div class="row">
-      <div class ="column" align="left">
+      <div class ="column">
+        <br>
         <p>This visualisation was made by Matthew Turchiarelli. The datasets used were from <a href="https://www.kaggle.com/goldenoakresearch/us-household-income-stats-geo-locations">Kaggle</a> and the <a href="https://www.census.gov/data/tables/time-series/demo/income-poverty/historical-income-households.html">Census</a></p>
       </div>
     </div>
