--- a/index.html
+++ b/index.html
@@ -25,11 +25,10 @@
       <div class="column">
         <img src="./plots/income_normal.png" alt="Normal distribution of income in the USA", width="550", height="450"> 
       </div>
-      <div id="vis4" class="column"></div.
+      <div id="vis4" class="column"></div>
     </div>
     <div class="row">
       <div class ="column">
-        <br>
         <p>This visualisation was made by Matthew Turchiarelli. The datasets used were from <a href="https://www.kaggle.com/goldenoakresearch/us-household-income-stats-geo-locations">Kaggle</a> and the <a href="https://www.census.gov/data/tables/time-series/demo/income-poverty/historical-income-households.html">Census</a></p>
       </div>
     </div>
